<?xml version="1.0" encoding="UTF-8"?>
<!--
Copyright 2013 Medium Entertainment, Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<resources>
    <string name="app_name">Playhaven Diagnostic Application</string>
    <string name="token">1234567890abcdef1234567890abcdef</string>
    <string name="secret">fedcba0987654321fedcba0987654321</string>

    <!-- Preferences -->
    <string name="pref_name">Preferences</string>
    <string name="pref_config">As configured in the PlayHaven Dashboard:</string>
    <string name="pref_token">Token</string>
    <string name="pref_token_msg">Like: 1234567890abcdef1234567890abcdef</string>
    <string name="pref_secret">Secret</string>
    <string name="pref_secret_msg">Like: 1234567890abcdef1234567890abcdef</string>
    <string name="pref_server">Server</string>
    <string name="pref_server_msg">Like: http://api2.playhaven.com</string>
    <string name="pref_file">Configuration File</string>
    <string name="pref_file_msg">Like: /sdcard/myapp.properties</string>
    <string name="pref_log">Log Level</string>
    <string name="pref_log_msg">Like: DEBUG</string>
    <string name="pref_dialog">Enter value</string>
    <string name="pref_id">Android ID</string>
    <string name="pref_sdkversion">SDK Version</string>
    <string name="pref_osversion">OS Version</string>
    <string name="pref_osapi">API Level</string>
    <string name="pref_gcmacct">GCM Account</string>
    <string name="pref_projectid">Push Project Id</string>

    <!-- Form -->
    <string name="go">Go</string>
    <string name="placementTag">Placement tag</string>
    <string name="auto">Auto</string>
    <string name="overlay">Overlay</string>
    <string name="animation">Animation</string>
    <string name="more">More Games</string>
    <string name="dialog">D</string>

    <!-- Using here instead of as a string-array so that we can reference as an enum -->
    <string name="req_open">Open Request</string>
    <string name="req_preload">Preload</string>
    <string name="req_content">Content Request</string>
    <string name="req_meta">Metadata Request</string>
    <string name="req_push_reg">GCM Registration Request</string>
    <string name="req_push_dereg">GCM Deregistration Request</string>

    <!-- PlayHavenView types -->
    <string name="view_activity">FullScreen</string>
    <string name="view_dialog">Windowed</string>
    
    <!-- Output display choices from Launcher -->
    <string name="output_request">Request</string>
    <string name="output_response">Response</string>
    <string name="output_result">Result</string>
    
    <string name="output_hint_text">Nothing yet…</string>
    <string name="go_btn">Start</string>
    <string name="go_hint">placement_tag (More Games to test all)</string>
    <string name="go_error">You must enter a More Games placement tag.</string>
    <string name="req_custom_event">Custom Event</string>
    <string name="eventFile">/sdcard/event1.json</string>
</resources>
