<?xml version="1.0" encoding="UTF-8"?>
<!--
Copyright 2013 Medium Entertainment, Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/pref_name">
    <PreferenceCategory android:title="@string/pref_config" android:key="pref_manual">
        <EditTextPreference android:key="pref_token" android:title="@string/pref_token"
                            android:dialogMessage="@string/pref_token_msg" android:dialogTitle="@string/pref_dialog"/>

        <EditTextPreference android:key="pref_secret" android:title="@string/pref_secret"
                            android:dialogMessage="@string/pref_secret_msg" android:dialogTitle="@string/pref_dialog"
                            android:dependency="pref_token"/>

        <EditTextPreference android:key="pref_server" android:title="@string/pref_server"
                            android:dialogMessage="@string/pref_server_msg" android:dialogTitle="@string/pref_dialog" />
        
        <EditTextPreference android:key="pref_projectid" android:title="@string/pref_projectid"
                            android:dialogTitle="@string/pref_dialog" />
    </PreferenceCategory>
    <PreferenceCategory android:title="or..." android:key="pref_auto">
        <EditTextPreference android:key="pref_file" android:title="@string/pref_file"
                            android:dialogMessage="@string/pref_file_msg" android:dialogTitle="@string/pref_dialog" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Additional Settings" android:key="pref_misc">
        <ListPreference
                android:title="@string/pref_log"
                android:key="pref_log"
                android:defaultValue="INFO"
                android:entries="@array/loglevels"
                android:entryValues="@array/loglevels" />
        <EditTextPreference android:key="pref_id" android:title="@string/pref_id" android:enabled="false"/>
        <EditTextPreference android:key="pref_sdkversion" android:title="@string/pref_sdkversion" android:enabled="false"/>
        <EditTextPreference android:key="pref_osversion" android:title="@string/pref_osversion" android:enabled="false"/>
        <EditTextPreference android:key="pref_osapi" android:title="@string/pref_osapi" android:enabled="false"/>
    </PreferenceCategory>
</PreferenceScreen>